Correo en Index Funcionando! Cambio de icono en Traducir!

--- a/src/java/com/genesis/modelo/languages/index_en.properties
+++ b/src/java/com/genesis/modelo/languages/index_en.properties
@@ -68,3 +68,4 @@ EquipoDeDesarrollo=Development Team
 AnalistaDeSistemas=Systems Analyst
 TienesDuda=Do you have any Question?
 Asunto=Topic
+Clave=Password
